--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;600&display=swap"
+    rel="stylesheet"
+    />
 </head>
 <body>
     <div class="container">
@@ -15,13 +22,15 @@
             <input readonly placeholder="Password" class="display" data-passwordDisplay>
 
             <button class="copyBtn" data-copy>
-                <span data-copyMsg></span>
+                <span class="tooltip" data-copyMsg></span>
                 <img src="./assets/copy.svg" alt="copy" width="23" height="23"> 
             </button>
         </div>
 
         <!--password length-->
         <div class="input-container">
+
+        <div class="length-container">
             <p>Password Length</p>
             <p data-lengthNumber>0</p>
         </div>
@@ -30,22 +39,22 @@
         <input type="range" min="1" max="20" class="slider" step="1" data-lengthSlider>
 
         <!--checkbox section-->
-        <div>
+        <div class="check"> 
             <input type="checkbox" id="uppercase">
             <label for="uppercase">Includes Uppercase letters</label>
         </div>
 
-        <div>
+        <div class="check">
             <input type="checkbox" id="lowercase">
             <label for="lowercase">Includes Uppercase letters</label>
         </div>
 
-        <div>
+        <div class="check">
             <input type="checkbox" id="numbers">
             <label for="numbers">Includes Numbers</label>
         </div>
 
-        <div>
+        <div class="check">
             <input type="checkbox" id="symbols">
             <label for="symbols">Includes Symbols</label>
         </div>
@@ -53,7 +62,7 @@
         <!--strength section-->
         <div class="strength-container">
             <p>Strength</p>
-            <div data-indicator></div>
+            <div class="indicator" data-indicator></div>
         </div>
 
         <!--generate password-->
