--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="check">
             <input type="checkbox" id="lowercase">
-            <label for="lowercase">Includes Uppercase letters</label>
+            <label for="lowercase">Includes Lowercase letters</label>
         </div>
 
         <div class="check">
